samples/_failures_safe/1761093727_a1a10e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1f0ff33.c: In function ‘print_token’:
./samples/SAFE/__tmp_a1f0ff33.c:169:16: error: missing terminating " character
  169 |         printf(" ('
      |                ^~~~
./samples/SAFE/__tmp_a1f0ff33.c:169:9: error: expected expression at end of input
  169 |         printf(" ('
      |         ^~~~~~
./samples/SAFE/__tmp_a1f0ff33.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1f0ff33.c:169:9: error: expected declaration or statement at end of input
